--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: thetips4you/testjodejsapp
+          images: lamiralmerlijn/cicd-app
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
